tailwind.css
/* ... */
.gap-1 {
  gap: 0.25rem;
}

.gap-8 {
  gap: 2rem;
}

.gap-10 {
  gap: 2.5rem;
}

.space-y-10 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
}

.space-x-3 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
}

.rounded {
  border-radius: 0.25rem;
}

.rounded-full {
  border-radius: 9999px;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-sm {
  border-radius: 0.125rem;
}

.bg-blue-paleBlue {
  --tw-bg-opacity: 1;
  background-color: rgba(231, 241, 234, var(--tw-bg-opacity));
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
}

.bg-yellow-400 {
  --tw-bg-opacity: 1;
  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
}

.bg-indigo-scrimbaIndigo {
  --tw-bg-opacity: 1;
  background-color: rgba(80, 53, 255, var(--tw-bg-opacity));
}

.bg-orange-paleOrange {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 250, 209, var(--tw-bg-opacity));
}

.bg-pink-palePink {
  --tw-bg-opacity: 1;
  background-color: rgba(251, 229, 243, var(--tw-bg-opacity));
}

.bg-orange-orangePumpkin {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 192, 109, var(--tw-bg-opacity));
}

.bg-indigo-scrimbaSkyblue {
  --tw-bg-opacity: 1;
  background-color: rgba(221, 235, 248, var(--tw-bg-opacity));
}

.bg-pink-ligthPink {
  --tw-bg-opacity: 1;
  background-color: rgba(231, 164, 208, var(--tw-bg-opacity));
}

.bg-yellow-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
}

.bg-red-tomatoe {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 128, 128, var(--tw-bg-opacity));
}

.p-2 {
  padding: 0.5rem;
}

.p-1 {
  padding: 0.25rem;
}

.p-0 {
  padding: 0px;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-2 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.px-1 {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.pt-5 {
  padding-top: 1.25rem;
}

.pb-5 {
  padding-bottom: 1.25rem;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.font-semibold {
  font-weight: 600;
}

.font-bold {
  font-weight: 700;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.shadow-md {
  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

@media (min-width: 320px) {
  .xs\:h-10 {
    height: 2.5rem;
  }

  .xs\:w-11\/12 {
    width: 91.666667%;
  }

  .xs\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .xs\:grid-rows-3 {
    grid-template-rows: repeat(3, minmax(0, 1fr));
  }

  .xs\:gap-2 {
    gap: 0.5rem;
  }

  .xs\:gap-1 {
    gap: 0.25rem;
  }

  .xs\:text-xs {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 476px) {
  .xs2\:ml-auto {
    margin-left: auto;
  }

  .xs2\:block {
    display: block;
  }

  .xs2\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .xs2\:grid-rows-2 {
    grid-template-rows: repeat(2, minmax(0, 1fr));
  }

  .xs2\:gap-4 {
    gap: 1rem;
  }

  .xs2\:gap-8 {
    gap: 2rem;
  }
}

@media (min-width: 640px) {
  .sm\:w-2\/6 {
    width: 33.333333%;
  }

  .sm\:grid-cols-1 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }

  .sm\:grid-rows-6 {
    grid-template-rows: repeat(6, minmax(0, 1fr));
  }

  .sm\:flex-row {
    flex-direction: row;
  }
}

@media (min-width: 768px) {
  .md\:mx-\[5\%\] {
    margin-left: 5%;
    margin-right: 5%;
  }

  .md\:mt-6\/20 {
    margin-top: 30%;
  }

  .md\:w-\[720px\] {
    width: 720px;
  }

  .md\:grid-cols-4 {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .md\:gap-0 {
    gap: 0px;
  }

  .md\:text-left {
    text-align: left;
  }

  .md\:text-right {
    text-align: right;
  }
}

@media (min-width: 1024px) {
  .lg\:mx-\[10\%\] {
    margin-left: 10%;
    margin-right: 10%;
  }

  .lg\:mx-\[5\%\] {
    margin-left: 5%;
    margin-right: 5%;
  }

  .lg\:mx-\[2\%\] {
    margin-left: 2%;
    margin-right: 2%;
  }

  .lg\:mx-\[1\.5\%\] {
    margin-left: 1.5%;
    margin-right: 1.5%;
  }

  .lg\:ml-20 {
    margin-left: 5rem;
  }

  .lg\:mt-72 {
    margin-top: 18rem;
  }

  .lg\:ml-\[2\%\] {
    margin-left: 2%;
  }

  .lg\:w-\[200px\] {
    width: 200px;
  }

  .lg\:w-\[1200px\] {
    width: 1200px;
  }

  .lg\:w-80 {
    width: 20rem;
  }

  .lg\:w-full {
    width: 100%;
  }

  .lg\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .lg\:gap-4 {
    gap: 1rem;
  }

  .lg\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
    --tw-space-y-reverse: 0;
    margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
    margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
  }

  .lg\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 1280px) {
  .xl\:mr-auto {
    margin-right: auto;
  }

  .xl\:ml-3 {
    margin-left: 0.75rem;
  }

  .xl\:max-w-screen-xl {
    max-width: 1280px;
  }
}

